--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dsa",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine --config=jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/amosboldor/DSA/issues"
   },
-  "homepage": "https://github.com/amosboldor/DSA#readme"
+  "homepage": "https://github.com/amosboldor/DSA#readme",
+  "devDependencies": {
+    "@tsconfig/node16-strictest": "^1.0.3",
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^18.0.5",
+    "jasmine": "^4.2.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  }
 }
