--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine --config=jasmine.json"
+    "test": "nyc jasmine --config=jasmine.json"
+  },
+  "nyc": {
+    "exclude": [
+      "spec/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -22,6 +27,7 @@
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.0.5",
     "jasmine": "^4.2.1",
+    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
