--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "description": "Youngling ➡️ Padawan ➡️ Knight ➡️ Jedi Master ⚔️",
   "scripts": {
-    "test": "nyc jasmine --config=jasmine.json"
+    "test": "c8 jasmine --config=jasmine.json"
   },
-  "nyc": {
+  "c8": {
     "exclude": [
       "spec/"
     ]
@@ -25,8 +25,8 @@
     "@tsconfig/node16-strictest": "^1.0.3",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.0.5",
+    "c8": "^7.12.0",
     "jasmine": "^4.2.1",
-    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
